# connman-gnome

./: Makefile.am  autogen.sh  configure.ac
applet/: main.c  status.c
common/: Makefile.am
lib/: Makefile.am  connman-client.xml
properties/: ethernet.c  wifi.c
